<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.stan</groupId>
  <artifactId>demo</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <java.version>1.8</java.version>
    <spring.version>4.3.4.RELEASE</spring.version>
    <spring-data.version>1.8.0.RELEASE</spring-data.version>
    <shiro.version>1.2.3</shiro.version>
    <mysql-connector-java.version>5.1.23</mysql-connector-java.version>
    <gson.version>2.8.0</gson.version>
    <slf4j.version>1.7.16</slf4j.version>
    <log4j.version>2.8.2</log4j.version>
    <jackson.version>1.9.13</jackson.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <commons.version>1.0.3</commons.version>
    <quartz.version>2.2.1</quartz.version>
    <axis.version>1.4</axis.version>
    <spring-data-redis-version>1.6.4.RELEASE</spring-data-redis-version>
    <mybatis.version>3.2.8</mybatis.version>
    <mybatis-spring.version>1.2.2</mybatis-spring.version>
    <httpclient.version>4.3.5</httpclient.version>
    <logback.version>1.2.3</logback.version>
  </properties>


  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20.1</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <modules>
    <module>javaDemo</module>
  </modules>
</project>